# Elastos.SDK.ElephantWallet.Contact

./: .android_toolchain  .gitignore
android/: .gitignore  build.gradle  settings.gradle
android/crosspl/anno/: build.gradle
android/crosspl/lib/: build.gradle
android/crosspl/lib/src/main/cpp/: CMakeLists.txt  CrossBase.cpp  CrossBase.hpp  CrossRunnable.cpp  CrossRunnable.hpp
android/crosspl/lib/src/main/cpp/utils/: Log.cpp  Log.hpp  Template.cpp  Template.hpp
android/gradle/: android.gradle  native.gradle
android/lib/: build.gradle
android/lib/src/main/: AndroidManifest.xml
android/lib/src/main/cpp/: BlockChainNode_jni.cpp  CMakeLists.txt  Contact.cpp  Contact.hpp  ContactBridge.cpp  ContactBridge.hpp  ContactDataListener.cpp  ContactDataListener.hpp  ContactDebug.cpp  ContactDebug.hpp  ContactFactory.cpp  ContactFactory.hpp  ContactListener.cpp  ContactListener.hpp  ContactMessage.cpp  ContactMessage.hpp  Contact_Factory.cpp  Contact_Factory.hpp
android/scripts/: build-depends.sh  build.sh
android/test/: build.gradle
android/test/src/main/: AndroidManifest.xml
doc/: doxy-api.cfg  mainpage.doxygen  template-c
doc/api/html/: index.html
doc/doxygen/: README  doxy-internal.cfg  template-h
doc/rst/: api_contact.rst  api_contact_factory.rst  api_contact_friendinfo.rst  api_contact_listener.rst  api_contact_message.rst  api_contact_userinfo.rst  api_guide.rst  index.rst
ios/CrossPL.xcodeproj/: project.pbxproj
ios/CrossPL.xcodeproj/xcshareddata/xcschemes/: anno.xcscheme
ios/Elastos.SDK.Contact.xcodeproj/: project.pbxproj
ios/Elastos.SDK.Contact.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/Elastos.SDK.Contact.xcodeproj/xcshareddata/xcschemes/: anno.xcscheme  test.xcscheme
ios/anno/resources/: CrossPLClass.proxy.mm.tmpl  CrossPLUtils.h  CrossPLUtils.mm  crosspl.sh
ios/anno/swift/: Annotation.swift  CrossClassAnnoProcessor.swift  CrossMethodInfo.swift  FoundationExtensions.swift
ios/anno/swift/generator/: CrossPLFactoryGenerator.swift  CrossPLUtilsGenerator.swift
ios/crosspl/anno/resources/: CrossPLClass.proxy.h.tmpl  CrossPLClass.proxy.mm.tmpl  CrossPLFactory.h.tmpl  CrossPLFactory.mm.tmpl  CrossPLUtils.h  CrossPLUtils.mm  crosspl.sh  experimental-span.hpp
ios/crosspl/anno/swift/: CrossClassAnnoProcessor.swift  CrossClassInfo.swift  CrossMethodInfo.swift  CrossTmplUtils.swift  CrossVariableType.swift  main.swift  test
ios/crosspl/lib/: CrossPL-Bridging-Header.h  Info.plist
ios/crosspl/lib/cpp/: CrossBase.cpp
ios/crosspl/lib/swift/: CrossBase.swift
ios/lib/: lib.h
ios/lib/cpp/: CrossBase.hpp
ios/lib/swift/: CrossBase.swift
ios/sdk/: Contact-Bridging-Header.h  sdk.h
ios/sdk/cpp/: ContactBridge.cpp  ContactBridge.hpp  ContactDataListener.hpp  ContactDebug.cpp  ContactDebug.hpp  ContactFactory.cpp  ContactFactory.hpp  ContactListener.cpp  ContactMessage.cpp  ContactMessage.hpp  KeypairWrapper.cpp  KeypairWrapper.hpp
ios/sdk/swift/: Contact.swift
ios/sdk/swift/internal/: AcquireArgs.swift  ContactBridge.swift  ContactChannel.swift  ContactDataListener.swift  ContactDebug.swift  Log.swift  (+13 more)
ios/test/: AppDelegate.swift  FoundationExtensions.swift  Helper.swift  ImagePicker.swift  RadioGroupView.swift  ViewController.swift  main.swift
ios/test/Base.lproj/: Main.storyboard
ios/testlib/: testlib.h
ios/testlib/test/: ExternalTest.cpp  ExternalTest.hpp  InternalTest.cpp  InternalTest.hpp  test.swift
lib/: CMakeLists.txt  Elastos.SDK.Contact.pc.in
lib/api/: CMakeLists.txt  ContactBridge.cpp  ContactBridge.hpp  ContactDataListener.cpp  ContactDataListener.hpp  ContactDebug.cpp  ContactDebug.hpp  ContactFactory.cpp  ContactListener.cpp  ContactListener.hpp  ContactMessage.cpp  ContactMessage.hpp
lib/common/: Base58.cpp  CMakeLists.txt  CompatibleFileSystem.hpp  DataTime.hpp  DateTime.hpp  Log.hpp  MD5.cpp  MD5.hpp  Random.hpp  SafePtr.hpp  ThreadPool.cpp  ThreadPool.hpp  ghc-filesystem.hpp
lib/include/: .ContactUser.hpp.swp  BaseInfo.hpp  Config.hpp  ContactBase.hpp  ContactFriend.hpp  ContactUniqueId.hpp  ContactUser.hpp  Elastos.SDK.Contact.hpp  ErrCode.hpp  FriendInfo.hpp  FriendManager.hpp  HumanInfo.hpp  IdentifyCode.hpp  MessageChannelStrategy.hpp  MessageManager.hpp  SecurityManager.hpp  UniqueId.hpp  UserInfo.hpp  UserManager.hpp
lib/platform/: CMakeLists.txt  Platform.hpp  PlatformAndroid.cpp  PlatformAndroid.hpp  PlatformDarwin.cpp  PlatformDarwin.hpp  PlatformIos.cpp  PlatformIos.hpp  PlatformUnixLike.cpp  PlatformUnixLike.hpp
lib/src/: BaseInfo.cpp  BlkChnClient.cpp  BlkChnClient.cpp.bak  BlkChnClient.hpp  CMakeLists.txt  ChannelImplCarrier.cpp  ChannelImplCarrier.hpp  ChannelImplCarrierDataTrans.cpp  ChannelImplCarrierDataTrans.hpp  ChannelImplElaChain.cpp  ChannelImplElaChain.hpp  Config.cpp  ContactUser.cpp  DidChnClient.cpp  DidChnClient.hpp  DidChnDataListener.cpp  DidChnDataListener.hpp  DidChnMonitor.cpp  DidChnMonitor.hpp  Elastos.SDK.Contact.cpp  ErrCode.cpp  FriendInfo.cpp  FriendManager.cpp  HumanInfo.cpp  IdentifyCode.cpp  JsonDefine.hpp  MessageChannelStrategy.cpp  MessageManager.cpp  SecurityManager.cpp  UserInfo.cpp  UserManager.cpp
lib/src/misc/: Log.cpp  ThreadPool.hpp  ThreadPool.tcc
lib/test/: BlkChnClientTest.cpp  CMakeLists.txt  ContactTest.cpp  ContactTestCmd.cpp  ContactTestCmd.hpp  ContactTestListener.cpp  ContactTestListener.hpp  ContactTestUI.sh  DidChnClientTest.cpp  MicroService.hpp  MicroServiceTest.cpp  MicroServiceTest.hpp  P2PNetworkBase.cpp  P2PNetworkBase.hpp  P2PNetworkBridge.cpp  P2PNetworkBridge.hpp  P2PNetworkCarrier.cpp  P2PNetworkCarrier.hpp  P2PNetworkSdk.cpp  P2PNetworkSdk.hpp  test.cpp
lib/test/elastos.sdk.contact/test/im7akJxWUnKKbEGoHTGU8UwDZKR2geRyZh/: carrier.data
lib/test/elastos.sdk.contact/test/inLn8NBZc3gUjBLpUPtPLccTapJQc77ZPQ/: carrier.data
lib/test/elastos.sdk.contact/test/ipafpo9QW2BoUMBGSkofdAdtM5NMKdYbYH/: carrier.data
lib/wrapper/httpclient/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp
lib/wrapper/httpclient/test/: HttpGet.cpp  HttpPost.cpp
lib/wrapper/json/: CMakeLists.txt  Json.cpp  Json.hpp
scripts/: build.sh
(+68 files in other folders)
